# python-make-examples

./: Python-Make-Article.md  README.md
foobar/: Makefile  README.md
hello-world/: Makefile  main.py
hello-world/tests/: test_main.py
pip/: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
pip/tests/: test_main.py
uv/: Makefile  README.md  main.py  pyproject.toml
uv/tests/: test_main.py
